syntax = "proto2";

package cloudprober.servers;

import "github.com/google/cloudprober/servers/grpc/proto/config.proto";
import "github.com/google/cloudprober/servers/http/proto/config.proto";
import "github.com/google/cloudprober/servers/udp/proto/config.proto";

option go_package = "github.com/google/cloudprober/servers/proto";

message ServerDef {
  enum Type {
    HTTP = 0;
    UDP = 1;
    GRPC = 2;
  }
  required Type type = 1;

  oneof server {
    http.ServerConf http_server = 2;
    udp.ServerConf udp_server = 3;
    grpc.ServerConf grpc_server = 4;
  }
}
